line spacing fixed

--- a/frontend/src/components/Lines.module.css
+++ b/frontend/src/components/Lines.module.css
@@ -1,3 +1,7 @@
+.lineNumber {
+    padding-left: 65%;
+}
+
 .preserveSpace {
     white-space: pre;
 }
